force-app/main/default/objects/kompalConfl1__c/kompalConfl1__c.object-meta.xml
<CustomObject>
    <label>kompalConfl1</label>
    <nameField>
        <label>kompalConfl1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>kompalConfl1s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>