force-app/main/default/objects/kompalConfl1__c/fields/kompalF1__c.field-meta.xml
<CustomField>
    <fullName>kompalF1__c</fullName>
    <label>kompalF1</label>
    <length>11</length>
    <type>Text</type>
</CustomField>