force-app/main/default/objects/kompalConfl1__c/fields/KompalF2__c.field-meta.xml
<CustomField>
    <fullName>KompalF2__c</fullName>
    <label>KompalF2</label>
    <length>12</length>
    <type>Text</type>
</CustomField>