force-app/main/default/objects/kompalConfl1__c/fields/KompalF3__c.field-meta.xml
<CustomField>
    <fullName>KompalF3__c</fullName>
    <label>KompalF3</label>
    <length>12</length>
    <type>Text</type>
</CustomField>